--- a/Static/src/scss/partials/base/particle/_grid.scss
+++ b/Static/src/scss/partials/base/particle/_grid.scss
@@ -22,7 +22,7 @@ main { padding: 20px; }
 	@include flex(0 1 auto);
 	@include flex-direction(row);
 	@include flex-wrap(wrap);
-	background: rgba(0,0,0,0.1);
+	background: #0A0A0A;
 
 	@at-root #{$fallback-class &} {
 		&:after {
@@ -37,7 +37,7 @@ main { padding: 20px; }
 		position: relative;
 		padding: 15px;
 		background: red;
-		border: 1px solid rgba(0,0,0,0.2);
+		border: 1px solid #333333;
 		background-clip: content-box;
 
 		&--sm-pull-0 { right: auto; }
